# Garden-Show

./: README.md  Show.py  addexhibitors.py  awards.py  configuration.py  enterwinners.py  entries.py  entryform.py  entryform_support.py  exhibitors.py  gui_support.py  members.py  model.py  name_chooser.py  reports.py  schedule.py  schedule.txt  untitled2.py
Data/: JudgesSheets.xlsx  Results.xlsx  awards.json  awards.pkl  awards.toml  data.pkl
Data/2019 Data/: awards.toml
Data/2023 Data/: AllReports.xlsx  Results.xlsx
Data/2024 Data/: JudgesSheets.xlsx  Results.xlsx  awards.pkl  awards.toml  data.pkl
Gui/: entryform.py  entryform.tcl  entryform.tre  entryform_support.py
ZODB spike/: Show.py  Untitled.ipynb  data.fs  data.fs.index
garden_show/: JudgesSheets.xlsx  Show.py  addexhibitors.py  awards.py  configuration.py  dao.py  enterwinners.py  entryform.py  gui_support.py  judges_results.py  model.py  output_results.py  pyproject.toml  reporter.py  reports.py  show_app.py
test/unit/: __init__.py  test_awards.py  test_entry.py  test_winner.py
